[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/GOTHICB.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Themes/Theme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/IO/Oscillator.gd" type="Script" id=3]
[ext_resource path="res://Assets/Images/palette.png" type="Texture" id=4]
[ext_resource path="res://Scenes/trail.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.952941, 0.952941, 0.952941, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.215686, 0.258824, 0.345098, 1 )

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 1 )

[node name="OSC" type="GraphNode" groups=["io", "nodes"]]
margin_right = 448.0
margin_bottom = 253.0
theme = ExtResource( 2 )
title = "OSCILLATOR"
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color( 0.415686, 0.447059, 0.521569, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_left = 10.0
margin_top = 30.0
margin_right = 438.0
margin_bottom = 33.0
rect_min_size = Vector2( 3, 3 )

[node name="ScreenParent" type="Control" parent="."]
margin_left = 10.0
margin_top = 46.0
margin_right = 438.0
margin_bottom = 246.0
rect_min_size = Vector2( 0, 200 )

[node name="Screen" type="Panel" parent="ScreenParent"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -82.0
margin_right = 200.0
margin_bottom = 78.0
custom_styles/panel = SubResource( 2 )

[node name="point" type="Position2D" parent="ScreenParent/Screen"]
position = Vector2( 16, 144 )

[node name="trail" parent="ScreenParent/Screen/point" instance=ExtResource( 5 )]

[node name="ValueLbl" type="Label" parent="."]
margin_left = 10.0
margin_top = 259.0
margin_right = 438.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1

[node name="Control" type="Control" parent="."]
margin_left = 10.0
margin_top = 325.0
margin_right = 438.0
margin_bottom = 325.0

[node name="Palette" type="Sprite" parent="."]
visible = false
position = Vector2( -213, 115 )
texture = ExtResource( 4 )

[connection signal="close_request" from="." to="." method="_on_OSC_close_request"]
